--- a/egressos/app/views/students/_form.html.erb
+++ b/egressos/app/views/students/_form.html.erb
@@ -42,6 +42,13 @@
   </div>
   <%= form.hidden_field :homologado, :value => 'false'  %>
 
+  <div id="contacts">
+    <%= form.fields_for :contacts do |contacts_fields| %>
+      <%= render partial: "contact_fields", locals: {f: contacts_fields} %>
+    <% end %>
+    <%= link_to_add_association('Adicionar [+]', form, :contacts) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
